--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-uglify": "~0.5.1",
-    "grunt-remove-logging": "~0.2.0"
+    "grunt-remove-logging": "~0.2.0",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-htmlfile-reporter": "^0.1.2",
+    "karma-ie-launcher": "^0.1.5",
+    "karma-jasmine": "^0.1.5",
+    "karma-phantomjs-launcher": "^0.1.4"
   }
 }
