--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-	"name": "PubSub.js",
+	"name": "pubsub.js",
 	"version": "0.0.5",
 	"homepage": "https://github.com/georapbox/PubSub",
 	"authors": [
