--- a/.jshintrc
+++ b/.jshintrc
@@ -1,26 +1,74 @@
 {
-    "camelcase": true,
+    "bitwise": false,
     "curly": true,
     "eqeqeq": true,
+    "esversion": 6,
     "forin": true,
     "freeze": true,
-    "immed": true,
-    "latedef": "nofunc",
-    "newcap": true,
+    "funcscope": false,
+    "futurehostile": true,
+    "globals": {},
+    "iterator": false,
+    "latedef": true,
+    "maxcomplexity": false,
+    "maxdepth": 0,
+    "maxerr": 100,
+    "maxparams": 6,
+    "maxstatements": 0,
     "noarg": true,
-    "noempty": true,
+    "nocomma": true,
     "nonbsp": true,
     "nonew": true,
-    "quotmark": "single",
-    "undef": true,
-    "unused": "strict",
-    "browser": true,
-    "devel": true,
-    "plusplus": true,
-    "loopfunc": true,
-    "indent": 4,
+    "notypeof": false,
     "predef": [
-        "module",
-        "define"
-    ]
+        "define",
+        "describe",
+        "expect",
+        "it",
+        "spyOn"
+    ],
+    "shadow": false,
+    "singleGroups": true,
+    "strict": true,
+    "undef": true,
+    "unused": true,
+    "varstmt": false,
+    "asi": false,
+    "boss": false,
+    "debug": false,
+    "elision": false,
+    "eqnull": true,
+    "evil": false,
+    "expr": true,
+    "lastsemic": false,
+    "loopfunc": false,
+    "moz": false,
+    "noyield": false,
+    "plusplus": true,
+    "proto": false,
+    "scripturl": false,
+    "supernew": false,
+    "validthis": false,
+    "withstmt": false,
+    "browser": true,
+    "browserify": false,
+    "couch": false,
+    "devel": true,
+    "dojo": false,
+    "jasmine": false,
+    "jquery": false,
+    "mocha": false,
+    "module": false,
+    "mootools": false,
+    "node": true,
+    "nonstandard": false,
+    "phantom": false,
+    "prototypejs": false,
+    "qunit": false,
+    "rhino": false,
+    "shelljs": false,
+    "typed": false,
+    "worker": false,
+    "wsh": false,
+    "yui": false
 }
