--- a/package.json
+++ b/package.json
@@ -1,19 +1,33 @@
 {
   "name": "PubSub",
-  "version": "1.0.1",
+  "version": "2.0.0",
+  "author": "George Raptis <georapbox@gmail.com>",
   "description": "Javascript implementation of the Publish/Subscribe pattern.",
   "homepage": "https://github.com/georapbox/PubSub",
-  "license": "Licensed under the MIT (http://www.opensource.org/licenses/mit-license.php) license.",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:georapbox/PubSub.git"
+},
+  "license": "(MIT)",
   "main": "src/pubsub.js",
+  "scripts": {
+    "minify": "grunt build",
+    "test": "karma start"
+  },
   "devDependencies": {
-    "grunt": "~0.4.5",
+    "jasmine-core": "~2.4.1",
+    "karma": "~0.13.22",
+    "karma-chrome-launcher": "~1.0.1",
+    "karma-cli": "~1.0.0",
+    "karma-firefox-launcher": "~1.0.0",
+    "karma-htmlfile-reporter": "~0.2.2",
+    "karma-ie-launcher": "~1.0.0",
+    "karma-jasmine": "~1.0.2",
+    "karma-phantomjs-launcher": "~1.0.0",
+    "phantomjs-prebuilt": "~2.1.7",
+    "grunt-cli": "~1.2.0",
+    "grunt": "~1.0.1",
     "grunt-contrib-uglify": "~0.5.1",
-    "grunt-remove-logging": "~0.2.0",
-    "karma-chrome-launcher": "^0.1.4",
-    "karma-firefox-launcher": "^0.1.3",
-    "karma-htmlfile-reporter": "^0.1.2",
-    "karma-ie-launcher": "^0.1.5",
-    "karma-jasmine": "^0.1.5",
-    "karma-phantomjs-launcher": "^0.1.4"
+    "grunt-remove-logging": "~0.2.0"
   }
 }
