--- a/package.json
+++ b/package.json
@@ -1,33 +1,37 @@
 {
   "name": "PubSub",
-  "version": "2.0.1",
-  "author": "George Raptis <georapbox@gmail.com>",
+  "version": "2.0.2",
   "description": "Javascript implementation of the Publish/Subscribe pattern.",
-  "homepage": "https://github.com/georapbox/PubSub",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:georapbox/PubSub.git"
-},
-  "license": "(MIT)",
   "main": "src/pubsub.js",
   "scripts": {
     "minify": "grunt build",
     "test": "karma start"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com:georapbox/PubSub.git"
+  },
+  "keywords": ["subscribe", "publish", "publish/subscribe", "pubsub", "pub/sub", "event", "emitter", "eventemitter"],
+  "author": "George Raptis <georapbox@gmail.com> (georapbox.github.io)",
+  "license": "(MIT)",
+  "bugs": {
+    "url": "https://github.com/georapbox/PubSub/issues"
+  },
+  "homepage": "https://github.com/georapbox/PubSub#readme",
   "devDependencies": {
-    "jasmine-core": "~2.4.1",
-    "karma": "~0.13.22",
-    "karma-chrome-launcher": "~1.0.1",
+    "jasmine-core": "~2.5.2",
+    "karma": "~1.3.0",
+    "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.0",
     "karma-firefox-launcher": "~1.0.0",
-    "karma-htmlfile-reporter": "~0.2.2",
+    "karma-htmlfile-reporter": "~0.3.4",
     "karma-ie-launcher": "~1.0.0",
     "karma-jasmine": "~1.0.2",
-    "karma-phantomjs-launcher": "~1.0.0",
-    "phantomjs-prebuilt": "~2.1.7",
+    "karma-phantomjs-launcher": "~1.0.2",
+    "phantomjs-prebuilt": "~2.1.14",
     "grunt-cli": "~1.2.0",
     "grunt": "~1.0.1",
-    "grunt-contrib-uglify": "~0.5.1",
+    "grunt-contrib-uglify": "~2.0.0",
     "grunt-remove-logging": "~0.2.0"
   }
 }
