--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
 	"name": "georapbox.pubsub.js",
-	"version": "2.0.1",
+	"version": "2.0.2",
 	"homepage": "https://github.com/georapbox/PubSub",
 	"authors": [
 		"George Raptis <georapbox@gmail.com>"
 	],
 	"description": "Javascript implementation of the Publish/Subscribe pattern.",
-	"main": "src/pubsub.js",
+	"main": "dist/pubsub.js",
 	"license": "MIT",
 	"keywords": [
 		"pubsub",
@@ -19,7 +19,7 @@
 		"**/.*",
 		".*",
 		"node_modules",
-		"tests",
+		"test",
 		"karma.conf.js"
 	]
 }
