--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "PubSub",
   "version": "2.0.2",
   "description": "Javascript implementation of the Publish/Subscribe pattern.",
-  "main": "src/pubsub.js",
+  "main": "dist/pubsub.js",
   "scripts": {
-    "minify": "grunt build",
+    "build": "webpack --mode=build",
+    "dev": "webpack --progress --colors --watch --mode=dev",
     "test": "karma start"
   },
   "repository": {
@@ -29,9 +30,13 @@
     "karma-jasmine": "~1.0.2",
     "karma-phantomjs-launcher": "~1.0.2",
     "phantomjs-prebuilt": "~2.1.14",
-    "grunt-cli": "~1.2.0",
-    "grunt": "~1.0.1",
-    "grunt-contrib-uglify": "~2.0.0",
-    "grunt-remove-logging": "~0.2.0"
+    "babel-cli": "~6.18.0",
+    "babel-core": "~6.21.0",
+    "babel-loader": "~6.2.8",
+    "babel-plugin-add-module-exports": "~0.2.1",
+    "babel-preset-es2015": "~6.18.0",
+    "eslint": "~3.12.2",
+    "webpack": "~1.14.0",
+    "yargs": "~6.5.0"
   }
 }
