--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,16 +2,9 @@
   "env": {
     "browser": true,
     "node": true,
-    "es6": true,
-    "jasmine": true
-  },
-  "parserOptions": {
-    "ecmaVersion": 6,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "impliedStrict": true,
-      "experimentalObjectRestSpread": true
-    }
+    "jasmine": true,
+    "commonjs": true,
+    "amd": true
   },
   "globals": {},
   "rules": {
@@ -300,77 +293,6 @@
     "space-infix-ops": 1,
 
     // enforce consistent spacing after the // or /* in a comment
-    "spaced-comment": [1, "always"],
-
-    /* ECMAScript 6 */
-
-    // require braces around arrow function bodies
-    "arrow-body-style": [1, "as-needed"],
-
-    // require parentheses around arrow function arguments
-    "arrow-parens": [1, "as-needed"],
-
-    // enforce consistent spacing before and after the arrow in arrow functions
-    "arrow-spacing": [1, {"before": true, "after": true}],
-
-    // require super() calls in constructors
-    "constructor-super": 2,
-
-    // enforce consistent spacing around * operators in generator functions
-    "generator-star-spacing": [1, {"before": true, "after": false}],
-
-    // disallow reassigning class members
-    "no-class-assign": 2,
-
-    // disallow arrow functions where they could be confused with comparisons
-    "no-confusing-arrow": 0,
-
-    // disallow reassigning const variables
-    "no-const-assign": 2,
-
-    // disallow duplicate class members
-    "no-dupe-class-members": 1,
-
-    // disallow duplicate module imports
-    "no-duplicate-imports": [1, {"includeExports": true}],
-
-    // disallow new operators with the Symbol object
-    "no-new-symbol": 2,
-
-    // disallow specified modules when loaded by import
-    "no-restricted-imports": [2, "assert","buffer","child_process","cluster","crypto","dgram","dns","domain","events","freelist","fs","http","https","module","net","os","path","punycode","querystring","readline","repl","smalloc","stream","string_decoder","sys","timers","tls","tracing","tty","url","util","vm","zlib"],
-
-    // disallow this/super before calling super() in constructors
-    "no-this-before-super": 2,
-
-    // disallow unnecessary computed property keys in object literals
-    "no-useless-computed-key": 1,
-
-    // disallow unnecessary constructors
-    "no-useless-constructor": 1,
-
-    // disallow renaming import, export, and destructured assignments to the same name
-    "no-useless-rename": 1,
-
-    // require let or const instead of var
-    "no-var": 1,
-
-    // require rest parameters instead of arguments
-    "prefer-rest-params": 1,
-
-    // require template literals instead of string concatenation
-    "prefer-template": 1,
-
-    // require generator functions to contain yield
-    "require-yield": 2,
-
-    // enforce spacing between rest and spread operators and their expressions
-    "rest-spread-spacing": [1, "never"],
-
-    // require or disallow spacing around embedded expressions of template strings
-    "template-curly-spacing": [1, "never"],
-
-    // require or disallow spacing around the * in yield* expressions
-    "yield-star-spacing": [1, {"before": true, "after": false}]
+    "spaced-comment": [1, "always"]
   }
 }
