--- a/bower.json
+++ b/bower.json
@@ -1,25 +1,23 @@
 {
-	"name": "georapbox.pubsub.js",
-	"version": "2.1.0",
-	"homepage": "https://github.com/georapbox/PubSub",
-	"authors": [
-		"George Raptis <georapbox@gmail.com>"
-	],
-	"description": "Javascript implementation of the Publish/Subscribe pattern.",
-	"main": "dist/pubsub.js",
-	"license": "MIT",
-	"keywords": [
-		"pubsub",
-		"publish",
-		"subscribe",
-		"pattern",
-		"javascript"
-	],
-	"ignore": [
-		"**/.*",
-		".*",
-		"node_modules",
-		"test",
-		"karma.conf.js"
-	]
+  "name": "georapbox.pubsub.js",
+  "version": "2.0.3",
+  "homepage": "https://github.com/georapbox/PubSub",
+  "authors": [
+    "George Raptis <georapbox@gmail.com>"
+  ],
+  "description": "Javascript implementation of the Publish/Subscribe pattern.",
+  "main": "dist/pubsub.js",
+  "license": "MIT",
+  "keywords": [
+    "pubsub",
+    "publish",
+    "subscribe",
+    "pattern",
+    "javascript"
+  ],
+  "ignore": [
+    "**/.*",
+    ".*",
+    "node_modules"
+  ]
 }
