Add public method subscribers() to get a readonly object of the current subscribers.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,9 @@
     "commonjs": true,
     "amd": true
   },
-  "globals": {},
+  "globals": {
+    "PubSub": false
+  },
   "rules": {
     /* Possible Errors */
 
