--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "PubSub",
-  "version": "3.1.0",
+  "version": "3.2.0",
   "description": "Javascript implementation of the Publish/Subscribe pattern.",
   "main": "src/pubsub.js",
   "scripts": {
     "build": "grunt build",
     "test": "karma start",
     "lint": "eslint src/**",
-    "jsdoc2md": "jsdoc2md \"src/pubsub.js\" > \"temp/api_readme.md\"",
+    "jsdoc2md": "jsdoc2md 'src/pubsub.js' > 'temp/api_readme.md'",
     "ci": "npm run lint; npm test;"
   },
   "repository": {
@@ -31,14 +31,14 @@
   },
   "homepage": "https://github.com/georapbox/PubSub#readme",
   "devDependencies": {
-    "eslint": "~3.13.1",
+    "eslint": "~3.19.0",
     "grunt": "~1.0.1",
     "grunt-cli": "~1.2.0",
-    "grunt-contrib-uglify": "~2.0.0",
+    "grunt-contrib-uglify": "~2.3.0",
     "grunt-remove-logging": "~0.2.0",
     "jasmine-core": "~2.5.2",
-    "jsdoc-to-markdown": "~2.0.1",
-    "karma": "~1.4.0",
+    "jsdoc-to-markdown": "~3.0.0",
+    "karma": "~1.6.0",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.0",
     "karma-firefox-launcher": "~1.0.0",
