--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "PubSub",
-  "version": "3.4.0",
+  "version": "3.5.0",
   "description": "Javascript implementation of the Publish/Subscribe pattern.",
   "main": "src/pubsub.js",
+  "files": [
+    "src/",
+    "dist/"
+  ],
   "scripts": {
     "build": "grunt build",
-    "test": "karma start",
+    "test": "mocha --colors ./test/*.spec.js",
     "lint": "eslint src/**",
-    "jsdoc2md": "jsdoc2md 'src/pubsub.js' > 'temp/api_readme.md'",
-    "ci": "npm run lint; npm test;",
-    "prepublish": "npm run test && npm run build"
+    "ci": "npm-run-all lint test",
+    "prepublishOnly": "npm-run-all test build",
+    "prepack": "npm-run-all test build"
   },
   "repository": {
     "type": "git",
@@ -25,29 +29,21 @@
     "emitter",
     "eventemitter"
   ],
-  "author": "George Raptis <georapbox@gmail.com> (georapbox.github.io)",
+  "author": "George Raptis <georapbox@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/georapbox/PubSub/issues"
   },
   "homepage": "https://github.com/georapbox/PubSub#readme",
   "devDependencies": {
-    "eslint": "~4.9.0",
+    "chai": "~4.2.0",
+    "eslint": "~5.12.1",
     "grunt": "~1.0.1",
-    "grunt-cli": "~1.2.0",
-    "grunt-contrib-uglify": "~3.1.0",
+    "grunt-cli": "~1.3.2",
+    "grunt-contrib-uglify": "~4.0.0",
     "grunt-remove-logging": "~0.2.0",
-    "jasmine-core": "~2.8.0",
-    "jsdoc-to-markdown": "~3.0.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-cli": "~1.0.0",
-    "karma-coverage": "~1.1.1",
-    "karma-firefox-launcher": "~1.0.0",
-    "karma-htmlfile-reporter": "~0.3.4",
-    "karma-ie-launcher": "~1.0.0",
-    "karma-jasmine": "~1.1.0",
-    "karma-phantomjs-launcher": "~1.0.2",
-    "phantomjs-prebuilt": "~2.1.14"
+    "mocha": "~5.2.0",
+    "sinon": "~7.2.3",
+    "sinon-chai": "~3.3.0"
   }
 }
