--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "grunt-contrib-uglify": "~4.0.0",
     "grunt-remove-logging": "~0.2.0",
     "mocha": "~5.2.0",
+    "npm-run-all": "~4.1.5",
     "sinon": "~7.2.3",
     "sinon-chai": "~3.3.0"
   }
