--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -271,7 +271,7 @@
     "no-whitespace-before-property": 1,
 
     // enforce consistent spacing inside braces
-    "object-curly-spacing": [1, "never"],
+    "object-curly-spacing": 0,
 
     // enforce the consistent use of either backticks, double, or single quotes
     "quotes": [1, "single", {"avoidEscape": true, "allowTemplateLiterals": true}],
