--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "PubSub",
-  "version": "3.6.0",
+  "version": "3.6.2",
   "description": "Javascript implementation of the Publish/Subscribe pattern.",
   "main": "src/pubsub.js",
   "files": [
@@ -12,7 +12,7 @@
     "test": "mocha --colors ./test/*.spec.js",
     "lint": "eslint src/**",
     "ci": "npm-run-all lint test",
-    "prepublishOnly": "npm-run-all test build",
+    "prepare": "npm-run-all test build",
     "prepack": "npm-run-all test build"
   },
   "repository": {
@@ -37,14 +37,14 @@
   "homepage": "https://github.com/georapbox/PubSub#readme",
   "devDependencies": {
     "chai": "~4.2.0",
-    "eslint": "~5.12.1",
-    "grunt": "~1.0.1",
+    "eslint": "~7.12.1",
+    "grunt": "~1.3.0",
     "grunt-cli": "~1.3.2",
-    "grunt-contrib-uglify": "~4.0.0",
+    "grunt-contrib-uglify": "~5.0.0",
     "grunt-remove-logging": "~0.2.0",
-    "mocha": "~5.2.0",
+    "mocha": "~8.2.0",
     "npm-run-all": "~4.1.5",
-    "sinon": "~7.2.3",
-    "sinon-chai": "~3.3.0"
+    "sinon": "~9.2.0",
+    "sinon-chai": "~3.5.0"
   }
 }
