--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: node_js
 node_js:
-  - 12
+  - '12'
 branches:
   only:
     - master
 install:
   - npm install
 script:
-  - npm run ci
+  - npm run clean && npm run lint && npm run build && npm run coveralls
