--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "name": "PubSub",
-  "version": "3.6.2",
+  "version": "4.0.0",
   "description": "Javascript implementation of the Publish/Subscribe pattern.",
-  "main": "src/pubsub.js",
+  "main": "dist/PubSub.cjs.min.js",
+  "module": "dist/PubSub.esm.min.js",
+  "unpkg": "dist/PubSub.umd.min.js",
   "files": [
     "src/",
     "dist/"
   ],
   "scripts": {
-    "build": "grunt build",
-    "test": "mocha --colors ./test/*.spec.js",
-    "lint": "eslint src/**",
-    "ci": "npm-run-all lint test",
-    "prepare": "npm-run-all test build",
-    "prepack": "npm-run-all test build"
+    "build": "rollup -c --environment BUILD:production",
+    "dev": "rollup -c -w",
+    "lint": "eslint src/**/*.js",
+    "test": "jest --config jest.config.js",
+    "test:watch": "npm run test -- --watch",
+    "test:coverage": "npm run test -- --coverage",
+    "coveralls": "npm run test:coverage && cat ./coverage/lcov.info | coveralls",
+    "clean": "rimraf dist coverage",
+    "prepare": "npm-run-all clean lint test build"
   },
   "repository": {
     "type": "git",
@@ -36,15 +41,19 @@
   },
   "homepage": "https://github.com/georapbox/PubSub#readme",
   "devDependencies": {
-    "chai": "~4.2.0",
-    "eslint": "~7.12.1",
-    "grunt": "~1.3.0",
-    "grunt-cli": "~1.3.2",
-    "grunt-contrib-uglify": "~5.0.0",
-    "grunt-remove-logging": "~0.2.0",
-    "mocha": "~8.2.0",
+    "@babel/core": "~7.12.10",
+    "@babel/plugin-proposal-object-rest-spread": "~7.12.1",
+    "@babel/preset-env": "~7.12.11",
+    "@babel/register": "~7.12.10",
+    "coveralls": "~3.1.0",
+    "cross-env": "~7.0.3",
+    "eslint": "~7.18.0",
+    "jest": "~26.6.3",
     "npm-run-all": "~4.1.5",
-    "sinon": "~9.2.0",
-    "sinon-chai": "~3.5.0"
-  }
+    "rimraf": "~3.0.2",
+    "rollup": "~2.37.1",
+    "@rollup/plugin-babel": "~5.2.2",
+    "rollup-plugin-terser": "~7.0.2"
+  },
+  "browserslist": "> 0.5%, last 2 versions, Firefox ESR, not dead"
 }
